[gd_scene load_steps=10 format=2]

[ext_resource path="res://MiMo/IO/Printer/Printer.gd" type="Script" id=1]
[ext_resource path="res://MiMo/IO/Printer/Assets/paper_dispenser_dithering.png" type="Texture" id=2]
[ext_resource path="res://MiMo/IO/Printer/Assets/paper_pattern.png" type="Texture" id=3]
[ext_resource path="res://MiMo/IO/Printer/Paper_Slice.gd" type="Script" id=4]
[ext_resource path="res://Assets/Fonts/Printer.tres" type="DynamicFont" id=5]
[ext_resource path="res://MiMo/IO/Printer/Printed_Text.gd" type="Script" id=6]
[ext_resource path="res://MiMo/IO/Printer/Printed_RIchText.gd" type="Script" id=7]
[ext_resource path="res://AudioDeviceSystem/RandomDevice/RandomDevice.tscn" type="PackedScene" id=8]
[ext_resource path="res://AudioDeviceSystem/AudioAssets/SFX_Print.ogg" type="AudioStream" id=9]

[node name="Printer" type="Container" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 480.0
margin_bottom = 496.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Rect" ]
printing_speed = 500

[node name="Paper_Dispenser_Top" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Paper_Dispenser_Bottom" type="Sprite" parent="." index="1"]

texture = ExtResource( 2 )
centered = false
offset = Vector2( 0, 472 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Paper_Slice" type="Sprite" parent="." index="2"]

texture = ExtResource( 3 )
centered = false
offset = Vector2( 10, 14 )
script = ExtResource( 4 )
_sections_unfolded = [ "Offset", "Z Index" ]
printing_speed = 50

[node name="Text_Area" type="Container" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 34.0
margin_top = 14.0
margin_right = 452.0
margin_bottom = 484.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Mouse", "Rect" ]

[node name="Printed_Text" type="Label" parent="Text_Area" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 408.0
margin_bottom = 410.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.0196078, 0.0470588, 0.235294, 1 )
text = ".
.
.
.
.
.
.
.
.
.
.
===============
===============
MIMO 0.2.8"
autowrap = true
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 6 )
_sections_unfolded = [ "custom_colors", "custom_fonts" ]
printing_speed = 5

[node name="Printed_Text_2" type="RichTextLabel" parent="Text_Area" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 408.0
margin_bottom = 410.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 0.0156863, 0.0431373, 0.231373, 1 )
bbcode_enabled = true
bbcode_text = ".
.
.
.
.
.
.
.
.
.
.
===============
===============
MIMO 0.2.8"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = ".
.
.
.
.
.
.
.
.
.
.
===============
===============
MIMO 0.2.8"
scroll_active = false
scroll_following = false
selection_enabled = false
override_selected_font_color = false
script = ExtResource( 7 )
_sections_unfolded = [ "BBCode" ]
printing_speed = 5

[node name="Paper_Dispenser_Top_Cover" type="Sprite" parent="." index="4"]

texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 480, 14 )
_sections_unfolded = [ "Offset", "Region" ]

[node name="Paper_Dispenser_Bottom_Cover" type="Sprite" parent="." index="5"]

texture = ExtResource( 2 )
centered = false
offset = Vector2( 0, 484 )
region_enabled = true
region_rect = Rect2( 0, 12, 480, 12 )
_sections_unfolded = [ "Offset", "Region", "Transform" ]

[node name="SFX" parent="." index="6" instance=ExtResource( 8 )]

Sounds = [ ExtResource( 9 ) ]
Volume = -7.0
minPitch = -2.0
maxPitch = 2.0


